--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         python-version: '3.x'
 
+    - name: Install dependencies
+      run: pip install feedparser
+
     - name: Run script
       run: python scripts/update_blog.py
 
