--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -1,11 +1,11 @@
+name: Update Blog Posts
+
 on:
   push:
     branches:
       - main
   schedule:
-    - cron: '0 0 * * *'
-    - cron: '0 15 * * *'
-    - cron: '0 * * * *'
+    - cron: '0 * * * *'   # 매시간 실행
   workflow_dispatch:
 
 jobs:
@@ -13,24 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install dependencies
-      run: pip install feedparser
+      - name: Install dependencies
+        run: pip install feedparser
 
-    - name: Run script
-      run: python scripts/update_blog.py
+      - name: Run script
+        run: python scripts/update_blog.py
 
-    - name: Commit & Push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add .
-        git commit -m "🔄 Update blog posts $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-        git push https://${{ secrets.GH_PAT }}@github.com/kyk02405/velog.git
+      - name: Commit & Push changes
+        run: |
+          # ✅ 본인 계정으로 커밋 (잔디 반영용)
+          git config --global user.name "kyk02405"
+          git config --global user.email "kyk02405@gmail.com"
+
+          git add .
+          git commit -m "🪴 Update Velog posts on $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git push https://${{ secrets.GH_PAT }}@github.com/kyk02405/velog.git
