--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 * * * *'   # 매시간 실행
+    - cron: '* 6 * * *'   # 매시간 실행
   workflow_dispatch:
 
 jobs:
