--- a/.github/workflows/update_blog.yml
+++ b/.github/workflows/update_blog.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '* 6 * * *'   # 매시간 실행
+    - cron: '0 * * * *'   # 매 시간 정각 실행
   workflow_dispatch:
 
 jobs:
@@ -27,12 +27,18 @@ jobs:
       - name: Run script
         run: python scripts/update_blog.py
 
-      - name: Commit & Push changes
+      - name: Commit & Push changes (only if changed)
         run: |
-          # ✅ 본인 계정으로 커밋 (잔디 반영용)
           git config --global user.name "kyk02405"
           git config --global user.email "kyk02405@gmail.com"
 
           git add .
-          git commit -m "🪴 Update Velog posts on $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+
+          # 🔥 변경 없으면 커밋/푸시 안 하고 종료
+          if git diff --cached --quiet; then
+            echo "No changes detected → No commit, no push, no grass 🌱"
+            exit 0
+          fi
+
+          git commit -m "🪴 Update Velog posts on $(date '+%Y-%m-%d %H:%M:%S')"
           git push https://${{ secrets.GH_PAT }}@github.com/kyk02405/velog.git
